; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Array.c_Array_Mem.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Array.c_Array_Mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Array = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Array*, %struct.Array*)* @Array_Mem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Array_Mem(%struct.Array* %0, %struct.Array* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.Array*, align 8
  %5 = alloca %struct.Array*, align 8
  %6 = alloca %struct.Array*, align 8
  %7 = alloca i64, align 8
  store %struct.Array* %0, %struct.Array** %4, align 8
  store %struct.Array* %1, %struct.Array** %5, align 8
  %8 = load %struct.Array*, %struct.Array** %4, align 8
  store %struct.Array* %8, %struct.Array** %6, align 8
  store i64 0, i64* %7, align 8
  br label %9

9:                                                ; preds = %24, %2
  %10 = load i64, i64* %7, align 8
  %11 = load %struct.Array*, %struct.Array** %6, align 8
  %12 = getelementptr inbounds %struct.Array, %struct.Array* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ult i64 %10, %13
  br i1 %14, label %15, label %27

15:                                               ; preds = %9
  %16 = load %struct.Array*, %struct.Array** %6, align 8
  %17 = load i64, i64* %7, align 8
  %18 = call i32 @Array_Item(%struct.Array* %16, i64 %17)
  %19 = load %struct.Array*, %struct.Array** %5, align 8
  %20 = call i64 @eq(i32 %18, %struct.Array* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %15
  store i32 1, i32* %3, align 4
  br label %28

23:                                               ; preds = %15
  br label %24

24:                                               ; preds = %23
  %25 = load i64, i64* %7, align 8
  %26 = add i64 %25, 1
  store i64 %26, i64* %7, align 8
  br label %9

27:                                               ; preds = %9
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %22
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i64 @eq(i32, %struct.Array*) #1

declare dso_local i32 @Array_Item(%struct.Array*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
